store/update/show working with uploading img files

--- a/resources/scss/partials/_general.scss
+++ b/resources/scss/partials/_general.scss
@@ -107,3 +107,13 @@ p {
     display: none;
     z-index: 8;
 }
+
+// PROJECT INDEX
+
+#img-index-td {
+    width: 40% !important;
+
+    img {
+        max-width: 80% !important;
+    }
+}
