--- a/resources/scss/partials/_general.scss
+++ b/resources/scss/partials/_general.scss
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@100;200;300;400;500;600;700&display=swap");
 
-body {
+html {
     position: relative;
+}
+body {
     font-size: 100%;
     font-family: "Encode Sans Condensed", sans-serif !important;
 }
