--- a/resources/scss/partials/_general.scss
+++ b/resources/scss/partials/_general.scss
@@ -2,8 +2,11 @@
 
 html {
     position: relative;
+    height: 100%;
 }
 body {
+    height: 100%;
+    min-height: 100%;
     font-size: 100%;
     font-family: "Encode Sans Condensed", sans-serif !important;
 }
@@ -92,7 +95,7 @@ p {
     background-color: #212528;
     color: white;
     width: 35%;
-    border: 1px solid rgb(177, 17, 17);
+    border: 2px solid rgb(177, 17, 17);
     border-radius: 20px;
     padding: 1.5em;
     display: none;
@@ -104,8 +107,10 @@ p {
     position: absolute;
     top: 0;
     right: 0;
+    bottom: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+
     display: none;
     z-index: 8;
 }
